<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Rbrooks-RectangleComputationLab</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="widthTV">Width</string>
    <string name="heightTV">Height</string>
    <string name="areaLBL">Area</string>
    <string name="perimeterLBL">Perimeter</string>
    <string name="inradiusLBL">Inradius</string>
    <string name="resultTV">Result</string>

</resources>
